Update code after feedback